--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="referrer" content="no-referrer" />
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/comforty/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
@@ -14,12 +14,12 @@
       rel="stylesheet"
     />
 
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/comforty/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/comforty/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -30,8 +30,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Comforty</title>
-    <script type="module" crossorigin src="/assets/index.746d8b38.js"></script>
-    <link rel="stylesheet" href="/assets/index.6e88bf77.css">
+    <script type="module" crossorigin src="/comforty/assets/index.746d8b38.js"></script>
+    <link rel="stylesheet" href="/comforty/assets/index.be9e15ab.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
